# cmake-learning

./: .gitignore  README.md
01/SomeLibDemo/: CMakeLists.txt  adder.cpp  adder.h
01/TestSome/: CMakeLists.txt  main.cpp
02/: CMakeLists.txt  configure.sh  main.cpp  run.sh
02/Adder/: CMakeLists.txt  adder.cpp  adder.h
02/TestSome/: CMakeLists.txt  main.cpp
